k8s/app/auth-deploy.yml
# Minio key
# Database key
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth
  labels:
    app: auth
spec:
  replicas: 1
  selector:
    matchLabels:
      app: auth
  template:
    metadata:
      labels:
        app: auth
    spec:
      containers:
      - name: auth
        image: ghcr.io/scalable-teamc/backend/auth:latest
        command: ["python","auth_app.py"]
      imagePullSecrets:
        - name: myregistrykey
