k8s/app/feed-deploy.yml
# Database key
apiVersion: apps/v1
kind: Deployment
metadata:
  name: feed
  labels:
    app: feed
spec:
  replicas: 1
  selector:
    matchLabels:
      app: feed
  template:
    metadata:
      labels:
        app: feed
    spec:
      containers:
      - name: feed
        image: ghcr.io/scalable-teamc/backend/feed:latest
        command: ["python","feed_controller.py"]
      imagePullSecrets:
        - name: myregistrykey
