k8s/app/profile-deploy.yml
# Minio key
# Database key
apiVersion: apps/v1
kind: Deployment
metadata:
  name: profile
  labels:
    app: profile
spec:
  replicas: 1
  selector:
    matchLabels:
      app: profile
  template:
    metadata:
      labels:
        app: profile
    spec:
      containers:
      - name: profile
        image: ghcr.io/scalable-teamc/backend/profile:latest
        command: ["python","profile_app.py"]
      imagePullSecrets:
        - name: myregistrykey
