k8s/app/frontend-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: frontend
  labels:
    service: frontend
spec:
  selector:
    app: frontend
  ports:
  - port: 8080
    targetPort: 8080
