k8s/app/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: scalable-twitter-ingress
  annotations:
    kubernetes.io/ingress.class: traefik
    ingress.kubernetes.io/ssl-redirect: "false"
    traefik.ingress.kubernetes.io/affinity: "true"
    traefik.backend.loadbalancer.stickiness: "true"
spec:
  rules:
  - http:
      paths:
      - path: /auth
        pathType: Prefix
        backend:
          service: 
            name: auth
            port: 
              number: 80
      - path: /post
        pathType: Exact
        backend:
          service: 
            name: post
            port: 
              number: 80
      - path: /get
        pathType: Prefix
        backend:
          service: 
            name: post
            port: 
              number: 80
      - path: /recent
        pathType: Exact
        backend:
          service: 
            name: post
            port: 
              number: 80
      - path: /user-post
        pathType: Prefix
        backend:
          service: 
            name: post
            port: 
              number: 80
      - path: /like
        pathType: Exact
        backend:
          service: 
            name: post
            port: 
              number: 80
      - path: /unlike
        pathType: Exact
        backend:
          service: 
            name: post
            port: 
              number: 80
      - path: /profile
        pathType: Prefix
        backend:
          service: 
            name: profile
            port: 
              number: 80
      - path: /profile/getshort
        pathType: Prefix
        backend:
          service: 
            name: profile
            port: 
              number: 80
      - path: /feed
        pathType: Prefix
        backend:
          service: 
            name: feed
            port: 
              number: 80
      - path: /socket.io
        pathType: Prefix
        backend:
          service:
            name: feed
            port:
              number: 80
